@@ -55,6 +55,7 @@
 #include <debug.h>
 
 #include <nuttx/fs.h>
+#include <nuttx/fat.h>
 
 #include "fs_internal.h"
 #include "fs_fat32.h"
